@@ -19,10 +19,10 @@ jobs:
       - run: echo "🐙 ${{ github.repository }} repository was cloned to the runner."
 
       - name: "Prepare Clojure tools"
-        uses: DeLaGuardo/setup-clojure@13.4
+        uses: DeLaGuardo/setup-clojure@13.5.2
         with:
           cljstyle: 0.17.642    # Cljstyle
-          clj-kondo: 2025.10.23 # Clj-kondo
+          clj-kondo: 2026.01.19 # Clj-kondo
 
       - name: "Lint Clojure"
         run: clj-kondo --lint deps.edn --config '{:output {:pattern "::{{level}} file={{filename}},line={{row}},col={{col}}::{{message}}"}}'
