@@ -24,7 +24,7 @@ jobs:
       - run: echo "🐙 ${{ github.repository }} repository was cloned to the runner."
 
       - name: Run Renovate
-        uses: renovatebot/github-action@v44.0.5
+        uses: renovatebot/github-action@v46.0.1
         with:
           configurationFile: .github/config/renovate.json
           token: ${{ secrets.RENOVATE_TOKEN }}
